<resources>
    <string name="channel" translatable="false">NOTIFICATIONCHANNEL</string>
    <string name="app_name">가천 알림이</string>
    <string name="Language">언어 설정</string>
    <string name="Notification">공지 사항</string>
    <string name="Setting">설정</string>
    <string name="OK">확인</string>
    <string name="NotificationFunction">알림 설정</string>
    <string name="CANCEL">취소</string>
    <string name="func">기능</string>
    <string name="money">후원</string>
    <string name="moneygive">도움이 필요합니다.</string>
    <string name="common">공통</string>
    <string name="medical">메디컬</string>
    <string name="global">글로벌</string>
    <string name="info">정보</string>
    <string name="ven">리스트 개수</string>
    <string name="details">자세한 설정</string>
    <string name="maker">만든이</string>
    <string name="source">오픈소스 정보</string>
    <string name="calling">교내 연락처</string>
    <string name="searcher">강의실 시간표 검색</string>
    <string name="open"/>
    <string name="load">오른쪽 하단 검색으로\n강의실 시간표를 불러오세요.</string>
    <string name="theme">테마</string>
    <string name="helper">도움을 주신 분들</string>
    <string name="version">버전</string>
    <string name="whatVersion">1.0.2</string>
    <string name="ssss">설정을 확인해주세요.</string>
    <string name="wiffy">\@wiffy-io</string>
    <string name="report">버그리포트 / 개선사항</string>
    <string name="values">캠퍼스 설정</string>
    <string name="mCampus">캠퍼스</string>
    <string name="update">
        메디컬 캠퍼스 강의실 업데이트\n
        (설정)에서 글로벌/메디컬 선택 가능\n
        알림이 안꺼지는 버그 수정\n
        마시멜로우 이하 버전에서 팅기는 버그 수정\n
        (꺼지지는 않지만 그림이 안보임.. ㅜㅜ)
    </string>

</resources>
