<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="3dp"
        app:cardElevation="0dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/white">
    <TableLayout
            android:stretchColumns="*"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TableRow>
            <RelativeLayout>
                <TextView
                        android:layout_alignParentStart="true"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginBottom="5dp"
                        android:gravity="bottom"
                        android:text="@string/theme"
                        android:textColor="@color/title2"
                        android:textStyle="bold"
                        android:layout_marginStart="15dp"
                />
            </RelativeLayout>
        </TableRow>
        <TableRow>
            <RelativeLayout
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="70dp">
                <RelativeLayout
                        android:layout_marginStart="35dp"
                        android:layout_alignParentStart="true"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">
                    <de.hdodenhof.circleimageview.CircleImageView
                            android:clickable="true"
                            android:focusable="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="8dp"
                            android:id="@+id/defaultColor"
                            android:src="@color/main2Blue"
                            app:civ_border_color="@color/WHITE"
                            app:civ_border_width="0dp"
                            android:layout_width="45dp"
                            android:layout_height="45dp"/>
                    <TextView
                            android:layout_centerHorizontal="true"
                            android:layout_alignParentBottom="true"
                            android:gravity="center"
                            android:id="@+id/defaultColorText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/main2Blue"
                            android:textSize="10sp"
                            android:text="DEFAULT"/>
                </RelativeLayout>
                <RelativeLayout
                        android:layout_marginStart="25dp"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">
                    <de.hdodenhof.circleimageview.CircleImageView
                            android:clickable="true"
                            android:focusable="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="8dp"
                            android:id="@+id/redColor"
                            android:src="@color/red"
                            app:civ_border_color="@color/WHITE"
                            app:civ_border_width="0dp"
                            android:layout_width="45dp"
                            android:layout_height="45dp"/>
                    <TextView

                            android:layout_centerHorizontal="true"
                            android:layout_alignParentBottom="true"
                            android:gravity="center"
                            android:id="@+id/redColorText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/red"
                            android:textSize="10sp"
                            android:text="RED"/>
                </RelativeLayout>

                <RelativeLayout
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="35dp"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">
                    <de.hdodenhof.circleimageview.CircleImageView
                            android:clickable="true"
                            android:focusable="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="8dp"
                            android:id="@+id/greenColor"
                            android:src="@color/green"
                            app:civ_border_color="@color/WHITE"
                            app:civ_border_width="0dp"
                            android:layout_width="45dp"
                            android:layout_height="45dp"/>
                    <TextView
                            android:layout_centerHorizontal="true"
                            android:layout_alignParentBottom="true"
                            android:gravity="center"
                            android:id="@+id/greenColorText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/green"
                            android:textSize="10sp"
                            android:text="GREEN"/>
                </RelativeLayout>
            </RelativeLayout>
        </TableRow>
        <TableRow>
            <RelativeLayout>
                <TextView
                        android:layout_alignParentStart="true"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginBottom="5dp"
                        android:gravity="bottom"
                        android:text="@string/ven"
                        android:textColor="@color/title2"
                        android:textStyle="bold"
                        android:layout_marginStart="15dp"
                />
            </RelativeLayout>
        </TableRow>
        <TableRow>
            <RelativeLayout
                    android:layout_height="60dp"
                    android:layout_width="match_parent">
                <ImageButton
                        android:id="@+id/toLeft"
                        android:layout_marginStart="30dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/left_touch"/>
                <TextView
                        android:textSize="30sp"
                        android:text="10"
                        android:id="@+id/setText"
                        android:gravity="center"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <ImageButton
                        android:id="@+id/toRight"
                        android:layout_marginEnd="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/right_touch"/>
            </RelativeLayout>
        </TableRow>
        <TableRow>
            <RelativeLayout>
                <TextView
                        android:layout_alignParentStart="true"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginBottom="5dp"
                        android:gravity="bottom"
                        android:text="@string/values"
                        android:textColor="@color/title2"
                        android:textStyle="bold"
                        android:layout_marginStart="15dp"
                />
            </RelativeLayout>
        </TableRow>
        <TableRow>
            <RelativeLayout
                    android:layout_height="50dp"
                    android:layout_width="match_parent">
                <RadioGroup
                        android:id="@+id/myRadio"
                        android:orientation="horizontal"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    <com.google.android.material.radiobutton.MaterialRadioButton
                            android:buttonTint="@color/red"
                            android:id="@+id/global"
                            android:textColor="@color/red"
                            android:layout_marginEnd="25dp"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/global"/>
                    <com.google.android.material.radiobutton.MaterialRadioButton
                            android:buttonTint="@color/green"
                            android:id="@+id/medical"
                            android:textColor="@color/green"
                            android:layout_marginStart="25dp"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/medical"/>
                </RadioGroup>
            </RelativeLayout>
        </TableRow>
        <TableRow>
            <RelativeLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">
                <Button
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="25dp"
                        android:layout_alignParentStart="true"
                        android:id="@+id/OK"
                        android:layout_marginBottom="25dp"
                        android:background="@drawable/dialog_button"
                        android:text="확인"
                        android:textColor="@color/WHITE"
                        android:layout_width="100dp" android:layout_height="30dp"
                />
                <Button
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="25dp"
                        android:layout_marginEnd="25dp"
                        android:layout_alignParentEnd="true"
                        android:id="@+id/Cancel"
                        android:background="@drawable/dialog_button"
                        android:text="취소"
                        android:textColor="@color/WHITE"
                        android:layout_width="100dp" android:layout_height="30dp"
                />
            </RelativeLayout>
        </TableRow>
    </TableLayout>
</androidx.cardview.widget.CardView>